--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include LICENSE
 include README.md
-recursive-include wagtail_custom_code_editor/static *
-recursive-include wagtail_custom_code_editor/templates *
-recursive-include wagtail_custom_code_editor/migrations *
-recursive-include wagtail_custom_code_editor/templatetags *
+recursive-include wagtail_custom_code_editor *
+global-exclude __pycache__
+global-exclude *.py[co]
