--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include LICENSE
 include README.md
+recursive-include docs/*
 recursive-include wagtail_custom_code_editor *
 global-exclude __pycache__
 global-exclude *.py[co]
